      a model where px = py
  - Tutorials
    . Physical simulation of a Franka robot, with a model that has been accurately
      identified from a real Franka robot using ViSP, ROS and CoppeliaSim.
      More info on http://wiki.ros.org/visp_ros
  - Bug fixed
    . [#913] Cannot build tutorial with librealsense < 2.31.0
    . [#926] Packaging with CPack doesn't work with Ogre dependency
----------------------------------------------
ViSP 3.4.0 (released February 26, 2021)
  - Contributors:
    . This release was possible thanks to contributions from Fabien Spindler,
      Pierre Chatelain, Souriya Trinh, Joudy Nader
    . Thanks also to Sergio Agostinho
  - New features and improvements
    . Compatibility with FreeBSD
    . Introduce transparency when displaying filled circle and rectangle with
      vpDisplayOpenCV
    . Complete refactoring of https://github.com/lagadic/visp_unity project
      a wrapper between ViSP and Unity
    . BLAS/LAPACK usage for linear algebra with either Intel MKL, OpenBLAS, Atlas,
      GSL, Netlib or Lapack built-in. Under Ubuntu, update-alternatives allows
      to switch during runtime between OpenBLAS, Atlas and Netlib
    . Remove vpMbEdgeMultiTracker, vpMbEdgeKltMultiTracker and vpMbKltMultiTracker
      deprecated classes. Use rather vpMbGenericTracker
    . visp.pc file used by pkg-config and visp-config script updated to
      be able to build a project that uses ViSP as 3rd party without CMake
    . New vpReflexTakktile2 class and examples to control Reflex Takktile 2 hand
      from Right Hand Robotics
    . New vpGaussianFilter class for Gaussian blur operation
    . vpRealsense2 class was extended to support Intel Realsense T265 device
    . Introduce Kannala Brandt projection model for fisheye cameras in vpCameraParameters
    . Extend existing tools to support Kannala Brandt projection model for XML I/O,
      undistort, pixel-meter and meter-pixel conversion